# xfce-goodies-svn

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure.ac  libtool
debian/: changelog  (+3 more)
trunk/xfce4-teatime-plugin/src/: Makefile.am  interface.c
xfce4-artwork/tags/BMEURER_20030717/: Makefile.am  Makefile.in  configure  configure.ac
xfce4-artwork/tags/BMEURER_20030717/backdrops/: Makefile.am
xfce4-battery-plugin/branches/XERVERIUS/: AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  TODO  autoclean.sh  configure.ac
xfce4-battery-plugin/branches/XERVERIUS/icons/: Makefile.am
xfce4-battery-plugin/branches/XERVERIUS/panel-plugin/: Makefile.am  battery-dialogs.c  battery-dialogs.h  battery-hal.c  battery-hal.h  battery-overview.c  battery-overview.h  battery-warning.c  battery-warning.h  battery.c  battery.desktop.in.in  battery.h
xfce4-battery-plugin/branches/XERVERIUS/po/: POTFILES.in
xfce4-bglist-editor/trunk/: AUTHORS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure.ac
xfce4-bglist-editor/trunk/design/: xfce-bglist-editor.py
xfce4-bglist-editor/trunk/patches/: xfdesktop-4.2.99-bglist-editor-external.patch
xfce4-bglist-editor/trunk/src/: Makefile.am  Makefile.in  aspect-scale.h  icon.h  main.c  makegobject.txt  trace.h  xfce-background-get.c  xfce-background-get.h  xfce-cell-renderer-pixbuf-on-demand.h  xfce-image-file-chooser.h  xfce-image-list-box.c  xfce-image-list-dialog.c
xfce4-bglist-editor/trunk/src/tests/: Makefile~  test-autoscaleimage.c  test-autoscaleimage.c~
xfce4-bglist-editor/trunk/tests/: a.c  main.c  xfce-get-background.c  xfce-get-background.h
xfce4-eyes/trunk/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
xfce4-eyes/trunk/panel-plugin/: Makefile.am  eyes.c  eyes.h  themes.c  themes.h
xfce4-eyes/trunk/po/: ChangeLog  Makefile.in.in  POTFILES.in  POTFILES.in~  ar.po  az.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  en_GB.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  lt.po  mr.po  ms.po  nb_NO.po  nl.po  pa.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sv.po  (+8 more)
xfce4-eyes/trunk/themes/: Makefile.am
xfce4-lua-graph-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
xfce4-lua-graph-plugin/trunk/panel-plugin/: Makefile.am  Makefile.in  luagraph.c
xfce4-lua-graph-plugin/trunk/scripts/: battery.lua  counter.lua  temperature.lua
xfce4-megahertz-plugin/trunk/panel-plugin/: Makefile.am  Makefile.in  megahertz.c  test.c
xfce4-minicmd-plugin/trunk/: AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac
xfce4-minicmd-plugin/trunk/panel-plugin/: Makefile.am  Makefile.in  command.c  minicmd.desktop.in.in
xfce4-minicmd-plugin/trunk/po/: POTFILES.in
xfce4-modemlights-plugin/trunk/: .cvsignore  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac
xfce4-modemlights-plugin/trunk/panel-plugin/: .cvsignore  Makefile.am  modemlights-plugin.c  modemlights-plugin.h
xfce4-modemlights-plugin/trunk/pixmaps/: ChangeLog  Makefile.am
xfce4-modemlights-plugin/trunk/po/: .cvsignore  ChangeLog  POTFILES.in  ca.po  eu.po  hu.po  ja.po  ko.po  nl.po  pl.po  vi.po  xfce4-modemlights-plugin.pot
xfce4-quicklauncher-plugin/4.2/panel-plugin/: Makefile.am  callbacks.h  main.c  types.h
xfce4-quicklauncher-plugin/branches/experimental/: Makefile.am  TODO  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
xfce4-quicklauncher-plugin/branches/experimental/panel-plugin/: Makefile  Makefile.in  callbacks.c  callbacks.h  main.c  types.h
xfce4-quicklauncher-plugin/branches/experimental/po/: Makefile  Makefile.in  Makefile.in.in  fr.po
xfce4-quicklauncher-plugin/trunk/: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  config.status  configure  configure.ac  libtool  mkinstalldirs
xfce4-quicklauncher-plugin/trunk/panel-plugin/: Makefile  Makefile.am  Makefile.in  avoid_deprecation.h  callbacks.c  callbacks.h  main.c  types.h
xfce4-quicklauncher-plugin/trunk/po/: ChangeLog  Makefile  Makefile.in  POTFILES  el.po  eu.po  fr.po  hu.po  ja.po  pl.po  ru.po  vi.po  xfce4-quicklauncher-plugin.po  xfce4-quicklauncher-plugin.pot
xfce4-radio-plugin/trunk/: Makefile.am  NEWS  README  autogen.sh  configure.ac
xfce4-radio-plugin/trunk/panel-plugin/: Makefile.am  radio.c  radio.h
xfce4-radio-plugin/trunk/po/: POTFILES.in  de.po  hu.po
xfce4-screenshooter-plugin/panel-plugin/: Makefile.am
xfce4-showdesktop-plugin/trunk/panel-plugin/: Makefile.am  Makefile.in  showdesktop.c
xfce4-websearch-plugin/tags/0.1.0/: configure.ac
xfce4-websearch-plugin/tags/0.1.0/po/: de.po
xfce4-websearch-plugin/tags/0.1.0/src/: Makefile.am  websearch.c
xfce4-websearch-plugin/trunk/src/: Makefile.am  websearch.c  websearch.desktop.in.in
xfce4-windowlist-plugin/trunk/panel-plugin/: Makefile.am  windowlist.c
xfce4-xfapplet-plugin/trunk/: AUTHORS  ChangeLog  configure.ac  configure.ac.in
xfce4-xfapplet-plugin/trunk/panel-plugin/: Makefile.am  XFCE_Panel_Popup.xml  chooser.c  xfapplet.c  xfapplet.desktop.in.in  xfapplet.h
xfce4-xfapplet-plugin/trunk/pixmaps/: Makefile.am
xfce4-xfapplet-plugin/trunk/po/: ChangeLog  POTFILES.in  el.po  fr.po  hu.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  vi.po  xfce4-xfapplet-plugin.pot  zh_CN.po  zh_TW.po
xfce4-xmms-plugin/trunk/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  intltool-update  libtool  xfce4-xmms-plugin.spec
xfce4-xmms-plugin/trunk/panel-plugin/: Makefile  Makefile.am  Makefile.in  xfce4-xmms-plugin.desktop.in.in  xmms_plugin.c  xmms_plugin.h
xfce4-xmms-plugin/trunk/pixmaps/: Makefile.am  Makefile.in  next.xcf  pause.xcf  play.xcf  prev.xcf  stop.xcf  template.xcf
xfce4-xmms-plugin/trunk/pixmaps/.xvpics/: prev.xcf
xfce4-xmms-plugin/trunk/po/: ChangeLog  POTFILES.in  de.gmo  de.po  eu.po  hu.po  ja.po  ko.po  lt.po  pl.po  vi.po  xfce4-xmms-plugin.pot
(+332 files in other folders)
