dnl configure.ac
dnl
dnl xfce4-artwork - additional artwork for XFce4 (e.g. backdrops)
dnl
dnl 2003 Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
dnl

AC_INIT([configure])

AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([xfce4-artwork], [0.0.1])

AM_MAINTAINER_MODE

dnl Check for basic programs
AC_PROG_INSTALL

AC_OUTPUT([
Makefile
backdrops/Makefile
])
